# wiktionary-parsley

./: Cargo.toml  README.md
src/: list.rs  main.rs  partitioner.rs  template.rs
