[package]
name = "wiktionary-parsley"
description = "Yet another parser for English wiktionary"
version = "0.1.0"
authors = ["Andrei Dubovik <andrei@dubovik.eu>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
lazy_static = "1.4"
phf = { version = "0.9", features = ["macros"] }
quick-xml = "0.22"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
